# nine-mens-morris

./: .gitignore  .gitmodules  CMakeLists.txt
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/mlogic1/morrisgame/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: config.json  fonts.json  scenes.json  shaders.json  textures.json
android/app/src/main/assets/scenes/: Mandelbrot.json  Scene_Main_Menu.json  Scene_Main_Menu.xml
android/app/src/main/assets/shaders/: FontShaderFragment.fs  MandelFragment.fs  OrthoShaderVertex.vs  StandardShaderFragment.fs  StandardShaderVertex.vs
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/mlogic1/morrisgame/: MainActivity.java
android/app/src/main/java/mlogic1/morrisgame/rendering/: CppRenderer.java  GLRenderer.java
android/app/src/main/java/mlogic1/morrisgame/view/: GLView.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/mlogic1/morrisgame/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
include/: SceneMainMenu.h
src/: SceneMainMenu.cpp
src/android/: main_android.cpp
src/desktop/: main.cpp
